--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "npx tsc",
     "dev": "nodemon index.ts",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prettier-format": "prettier --config .prettierrc --write"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,13 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.34.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4"
   }
 }
