--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "exports": "./dist/index.js",
   "scripts": {
     "build": "npx tsc",
-    "dev": "nodemon index.ts",
+    "dev": "nodemon --exec ts-node --require tsconfig-paths/register index.ts",
     "start": "node dist/index.js",
     "prettier-format": "prettier --config .prettierrc --write"
   },
@@ -23,18 +23,21 @@
   "homepage": "https://github.com/scharkoff/online_chat-backend#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "socket.io": "^4.6.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.34.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   }
 }
