--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.34.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "esm": "^3.2.25",
     "nodemon": "^2.0.22",
