Fix production errors
- Fix error with import errors in "node dist/index.js" because need to use "-r tsconfig-paths/register -r ts-node/register" flags when using ts-node with absolute paths (for start and dev mode)
- Fix error with two new Container() instances (create one instance in index.ts)
-

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "npx tsc",
     "dev": "npx nodemon",
-    "start": "npx tsc && node dist/index.js",
+    "start": "npx tsc && node -r tsconfig-paths/register -r ts-node/register dist/index.js",
     "prettier-format": "prettier --config .prettierrc --write"
   },
   "repository": {
